kubernetes/apps/selfhosted/bichon/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.greyrock.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bichon
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bichon
      app.kubernetes.io/instance: bichon
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "15630"
              protocol: TCP
